2013-10-30  Sergio Martin <sergio.martin@artica.es>

	* godmode/setup/performance.php: Added tip messages to
	advice possible conflicts of performance configuration

2013-10-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the output of data as csv when
	the data have a return carriges.

2013-10-22 Hirofumi Kosaka <kosaka@rworks.jp>
        
	* include/help/en/help_alert_config.php,
	include/help/en/help_alert_macros.php,
	include/help/es/help_alert_config.php,
	include/help/es/help_alert_macros.php,
	include/help/ja/help_alert_config.php,
	include/help/ja/help_alert_macros.php: Added _timezone_
	alert macro descriptions.

2013-10-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php: fixed the message to show the
	user, and fixed the checks.
	
	INCIDENT: #320

2013-10-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_agents.php: fixed the delete the nodes in the
	networkmap enterprise.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-10-29  Sergio Martin <sergio.martin@artica.es>

	* extensions/insert_data.php: Fix broken insert data
	feature for incident #331

2013-10-29  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Merge the logic from the 
	pdf reports to have the same results in both sides for 
	incident #314

2013-10-28  Ramon Novoa  <rnovoa@artica.es>

	* install.php: Added some missing ids.

2013-10-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.list_items.php,
	godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.elements.php,
	godmode/reporting/visual_console_builder.editor.php,
	include/help/en/help_visual_console_editor_editor_tab.php,
	include/javascript/jquery.pandora.js,
	include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php,
	include/functions_visual_map_editor.php: added rich labels for all